--- a/style.css
+++ b/style.css
@@ -9,4 +9,65 @@ body {
   padding: 0;
 }
 
-/* Add styles here! */
+header {
+  padding-block-start: 96px;
+  padding-block-end: 48px;
+}
+
+h1, h2{
+  font-size: 2rem;
+  margin: 0;
+}
+
+h1 {
+  margin-block-end: 48px;
+}
+
+h2 {
+  margin-block-end: 24px;
+}
+
+p {
+  margin-block-start: 0;
+  margin-block-end: 16px;
+  font-size: 1.25rem;
+  line-height: 1.875rem;
+}
+
+strong {
+  color: hsl(160deg, 100%, 30%);
+}
+
+
+main {
+  background-color: hsl(0 0% 40% / 1);
+  border-block-start: 8px solid hsl(0 0% 60% / 1);
+  padding-block: 64px;
+}
+
+.max-width-wrapper {
+  max-width: 800px;
+  margin-inline: auto;
+}
+
+.intro-chunk {
+  max-width: 424px;
+  padding-inline-start: 24px;
+}
+
+.card {
+  margin-block-end: 0;
+  border-block-end: 8px solid hsl(0 0% 60% / 1);
+  padding-block: 8px;
+  padding-inline: 24px;
+  background-color: white;
+}
+
+.indented-heading {
+  margin-inline-start: -32px;
+  border-block-end: 8px solid hsl(45 100% 40% / 1);
+  padding-block: 16px;
+  padding-inline: 32px;
+  width: fit-content;
+  background-color: hsl(45 100% 50% / 1);
+}
